@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2022  Hybird
+#    Copyright (C) 2009-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -66,6 +66,7 @@ class SendingBody(generic.RelatedToEntityDetail):
 
 # Useful because EmailSending is not a CremeEntity (should be ?)
 class SendingBricksReloading(bricks_views.BricksReloading):
+    permissions = 'emails'
     check_bricks_permission = False
     sending_id_url_kwarg = 'sending_id'
     allowed_bricks = {
